--- a/football-stats/src/main/resources/application.properties
+++ b/football-stats/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+hibernate.dialect = org.hibernate.dialect.MySQLDialect
+hibernate.connection.driver_class = com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/NFL_Season_Records
+spring.datasource.username=btracey
+spring.datasource.password=#Database1
